new pages added and other corrections

--- a/book/print.html
+++ b/book/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li><li class="chapter-item expanded "><a href="wezterm/dpi-detection.html"><strong aria-hidden="true">6.2.</strong> DPI detection</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Neovim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -517,8 +517,8 @@ special symbols are available even without requiring you to use a patched font.<
 </div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="font"><a class="header" href="#font">Font</a></h1>
-<p>基本的には好きなフォントを使ってもらえれば良いです。</p>
-<p>以下に再掲しますが、<code>starship</code>を使用する場合も<code>WezTerm</code>であれば<code>Nerd Font</code>を考慮する必要がありません。</p>
+<p>これはもう、ほんとにお好きなフォントを使ってもらえれば良いです。</p>
+<p>以下に再掲しますが、<code>starship</code>を使用する場合も<code>WezTerm</code>であれば<code>Nerd Font</code>を考慮する必要がありません😆</p>
 <div id="admonition-weztermnerdfontshttpswezfurlongorgweztermconfigluaweztermnerdfontshtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/nerdfonts.html">wezterm.nerdfonts</a></p>
@@ -531,7 +531,7 @@ special symbols are available even without requiring you to use a patched font.<
 これはパッチされたフォントを使わなくてもこれらの特殊記号が利用可能であることを意味します。</p>
 </div>
 </div>
-<p>ただ、デフォルトの<code>Roboto</code>だと環境にもよるかもしれませんが、日本語がイマイチ...😢</p>
+<p>ただ、環境にもよるかもしれませんが、デフォルトの<code>Roboto</code>だと日本語がイマイチ...😢</p>
 <p><img src="wezterm/img/font-roboto.png" alt="font-roboto.png" /></p>
 <p>なんてことがあるので、次項に続くわけです。</p>
 <h2 id="プログラミングフォント-firge-ファージ"><a class="header" href="#プログラミングフォント-firge-ファージ">プログラミングフォント Firge (ファージ)</a></h2>
@@ -1639,53 +1639,35 @@ end)
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="custom-event"><a class="header" href="#custom-event">Custom Event</a></h1>
 <p>さて、一通り片付いたかな〜って感じなので、ここは付録みたいなものです。</p>
-<p>お付き合いいただける方は<code>custom.lua</code>とでもしてまたファイルを作成しましょう。</p>
-<div id="admonition-customlua" class="admonition example">
+<p>お付き合いいただける方は<code>event.lua</code>とでもしてまたファイルを作成しましょう。</p>
+<div id="admonition-eventlua" class="admonition example">
 <div class="admonition-title">
-<p>custom.lua</p>
-<p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-customlua"></a></p>
+<p>event.lua</p>
+<p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-eventlua"></a></p>
 </div>
 <div>
 <pre><code class="language-lua">-- まだ何にもない。
 </code></pre>
 </div>
 </div>
-<p>ここにはキーバインドから呼び出す独自の動作を実装していくつもりなので、<code>keybinds.lua</code>から呼び出しましょう。</p>
-<div id="admonition-keybindslua" class="admonition example">
+<p>これもまたお馴染みですが、<code>wezterm.lua</code>から呼び出しましょう。</p>
+<div id="admonition-weztermlua" class="admonition example">
 <div class="admonition-title">
-<p>keybinds.lua</p>
-<p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-keybindslua"></a></p>
+<p>wezterm.lua</p>
+<p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-weztermlua"></a></p>
 </div>
 <div>
-<pre><code class="language-lua">require 'custom'
-
--- ↓ ここまでで色々と記述したところ
-local act = require('wezterm').action
-
-return {
-  -- キーバインド設定が並ぶ
-}
+<pre><code class="language-lua">require 'event'
 </code></pre>
 </div>
 </div>
-<p>再掲ですが、すでに<code>WezTerm</code>内で実装されている動作は一覧されています。</p>
-<div id="admonition-enum-keyassignment---wezs-terminal-emulatorhttpswezfurlongorgweztermconfigluakeyassignmentindexhtml" class="admonition note">
-<div class="admonition-title">
-<p><a href="https://wezfurlong.org/wezterm/config/lua/keyassignment/index.html">enum: KeyAssignment - Wez's Terminal Emulator</a></p>
-<p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-enum-keyassignment---wezs-terminal-emulatorhttpswezfurlongorgweztermconfigluakeyassignmentindexhtml"></a></p>
-</div>
-<div>
-<p>A KeyAssignment represents a pre-defined function that can be applied to control the Window, Tab, Pane state typically when a key or mouse event is triggered.</p>
-</div>
-</div>
-<p>基本的にはここから選んでどう使うか、みたいな話になってきます。</p>
 <div id="admonition-success" class="admonition success">
 <div class="admonition-title">
 <p>Success</p>
 <p><a class="admonition-anchor-link" href="wezterm/custom.html#admonition-success"></a></p>
 </div>
 <div>
-<p>それでは次に進みましょう。</p>
+<p>もう何も言うことはありませんね。次に進みましょう。</p>
 </div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="toggle-font"><a class="header" href="#toggle-font">Toggle Font</a></h1>
@@ -1725,10 +1707,10 @@ return {
 </div>
 <p>端的に言えば、オーバーライドされていない素の状態であれば、<code>font_size</code>を<code>10.0</code>でオーバーライドする。</p>
 <p>オーバーライドされているのであれば、<code>font_size</code>を<code>nil</code>としてオーバーライドを無効化する(<code>14.0</code>に戻される)。</p>
-<div id="admonition-customlua" class="admonition example">
+<div id="admonition-eventlua" class="admonition example">
 <div class="admonition-title">
-<p>custom.lua</p>
-<p><a class="admonition-anchor-link" href="wezterm/toggle-font.html#admonition-customlua"></a></p>
+<p>event.lua</p>
+<p><a class="admonition-anchor-link" href="wezterm/toggle-font.html#admonition-eventlua"></a></p>
 </div>
 <div>
 <pre><code class="language-lua">local wezterm = require 'wezterm'
@@ -1783,7 +1765,7 @@ end)
 </div>
 <div>
 <p>あれ？dpi取得できるなら自動で出来るのかな。このサイト作りながら気づいてしまった...。</p>
-<p>アウトプットはしてみるものですね😆</p>
+<p>アウトプットはしてみるものですね😆次のページに書いちゃいます。</p>
 </div>
 </div>
 <p>素の状態: <sup class="footnote-reference"><a href="#big">1</a></sup>
@@ -1802,6 +1784,103 @@ end)
 </div>
 <div class="footnote-definition" id="big"><sup class="footnote-definition-label">1</sup>
 <p>さらにフォントサイズを大きくして説明用に誇張しています。が、まだなんか中途半端でしたね。</p>
+</div>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="dpi-detection"><a class="header" href="#dpi-detection">dpi-detection</a></h1>
+<p>前回は手動でフォントサイズの切り替えを行いましたが、今回はこれを<code>dpi</code>の変更を検知して自動で切り替わるようにします。</p>
+<h2 id="まず前置き"><a class="header" href="#まず前置き">まず前置き</a></h2>
+<p>さて、これまでにも何度か出てきていた<code>wezterm.on</code>ですが、以下のような説明がありました。</p>
+<div id="admonition-weztermonevent_name-callbackhttpswezfurlongorgweztermconfigluaweztermonhtml" class="admonition note">
+<div class="admonition-title">
+<p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/on.html">wezterm.on(event_name, callback)</a></p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-weztermonevent_name-callbackhttpswezfurlongorgweztermconfigluaweztermonhtml"></a></p>
+</div>
+<div>
+<p>wezterm.on can register multiple callbacks for the same event; internally an ordered list of callbacks is maintained for each event.
+When the event is emitted, each of the registered callbacks is called in the order that they were registered.</p>
+<p>wezterm.on は、同じイベントに対して複数のコールバックを登録することができます; 内部的には、各イベントに対してコールバックの順序付きリストが維持されます。
+イベントが発信されると、登録された各コールバックは、登録された順に呼び出されます。</p>
+</div>
+</div>
+<p>これを踏まえた上で、<code>update-status</code>をもう一個作ります。<sup class="footnote-reference"><a href="#a">1</a></sup></p>
+<div id="admonition-update-statushttpswezfurlongorgweztermconfigluawindow-eventsupdate-statushtml" class="admonition note">
+<div class="admonition-title">
+<p><a href="https://wezfurlong.org/wezterm/config/lua/window-events/update-status.html">update-status</a></p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-update-statushttpswezfurlongorgweztermconfigluawindow-eventsupdate-statushtml"></a></p>
+</div>
+<div>
+<p>There is no defined return value for the event, but its purpose is to allow you the chance to carry out some activity and then ultimately call window:set_right_status or window:set_left_status.</p>
+<p>このイベントの戻り値は定義されていませんが、その目的は、何らかの活動を行い、最終的に window:set_right_status または window:set_left_status を呼び出す機会を提供することです。</p>
+</div>
+</div>
+<p>説明にもある通り、「最終的に<code>window:set_right_status</code>または<code>window:set_left_status</code>を呼び出す目的」のものであるため、
+なんかコレじゃないとは思っていますが、他に方法が見つけられませんでした😢</p>
+<div id="admonition-info" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-info"></a></p>
+</div>
+<div>
+<p>今後の仕様追加・変更によって、より自然に実現できるかもしれませんね。</p>
+</div>
+</div>
+<h2 id="では実装"><a class="header" href="#では実装">では実装</a></h2>
+<p><code>event.lua</code>に新しく以下を追記します。</p>
+<div id="admonition-eventlua" class="admonition example">
+<div class="admonition-title">
+<p>event.lua</p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-eventlua"></a></p>
+</div>
+<div>
+<pre><code class="language-lua">local DPI_CHANGE_NUM = 144
+local DPI_CHANGE_FONT_SIZE = 10.0
+
+local prev_dpi = 0
+
+wezterm.on('ToggleDpi', function(window, pane)
+  local overrides = window:get_config_overrides() or {}
+  overrides.font_size = window.get_dimensitons().dpi == CHANGE_NUM and CHANGE_FONT_SIZE or nil
+
+  window:set_config_overrides(overrides)
+end)
+
+wezterm.on('update-status', function(window, pane)
+  local dpi = window:get_dimensions().dpi
+
+  if dpi == prev_dpi then
+    return
+  end
+
+  wezterm.action.EmitEvent('ToggleDpi')
+  prev_dpi = dpi
+end)
+</code></pre>
+</div>
+</div>
+<p><code>dpi</code>と<code>font_size</code>周りの値はわたしの環境で決め打ちにしちゃってるので適宜調整してください。</p>
+<p>動作としては、<code>dpi</code>に変更があったら<code>ToggleDpi</code>と名付けたカスタムイベントを呼び出すと言うものです。
+<code>ToggleDpi</code>の自体は手動でやっていた処理とほぼ同じですね。</p>
+<div id="admonition-info-1" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-info-1"></a></p>
+</div>
+<div>
+<p>わざわざ<code>ToggleDpi</code>なんていうカスタムイベントいらなくない？と思われるかもしれませんが、
+やっぱり<code>update-status</code>の本来の意図とは違う使い方なので最小限で抜けたいんですよね〜。</p>
+</div>
+</div>
+<div id="admonition-success" class="admonition success">
+<div class="admonition-title">
+<p>Success</p>
+<p><a class="admonition-anchor-link" href="wezterm/dpi-detection.html#admonition-success"></a></p>
+</div>
+<div>
+<p>なんか、すごい簡単でしたね😆</p>
+<p>既に用意されているロジックをつなぐだけ☺️</p>
+</div>
+</div>
+<div class="footnote-definition" id="a"><sup class="footnote-definition-label">1</sup>
+<p>ステータスバーの飾り付けの際にも使用しましたね。</p>
 </div>
 
                     </main>
