--- a/book/wezterm/dpi-detection.html
+++ b/book/wezterm/dpi-detection.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>installation - Commentary</title>
+        <title>DPI detection - Commentary</title>
 
 
         <!-- Custom HTML head -->
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html" class="active"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li><li class="chapter-item expanded "><a href="../wezterm/dpi-detection.html"><strong aria-hidden="true">6.2.</strong> DPI detection</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Neovim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li><li class="chapter-item expanded "><a href="../wezterm/dpi-detection.html" class="active"><strong aria-hidden="true">6.2.</strong> DPI detection</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Neovim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -155,50 +155,112 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="installation"><a class="header" href="#installation">Installation</a></h1>
-<p>まずは<code>WezTerm</code>です。</p>
-<p>インストールは<code>homebrew</code>などのパッケージ管理システムや、ホームページ上で提供されている実行ファイルをダウンロードする方法があります。</p>
-<div id="admonition-install---wezs-terminal-emulatorhttpswezfurlongorgwezterminstallationhtml" class="admonition note">
+                        <h1 id="dpi-detection"><a class="header" href="#dpi-detection">dpi-detection</a></h1>
+<p>前回は手動でフォントサイズの切り替えを行いましたが、今回はこれを<code>dpi</code>の変更を検知して自動で切り替わるようにします。</p>
+<h2 id="まず前置き"><a class="header" href="#まず前置き">まず前置き</a></h2>
+<p>さて、これまでにも何度か出てきていた<code>wezterm.on</code>ですが、以下のような説明がありました。</p>
+<div id="admonition-weztermonevent_name-callbackhttpswezfurlongorgweztermconfigluaweztermonhtml" class="admonition note">
 <div class="admonition-title">
-<p><a href="https://wezfurlong.org/wezterm/installation.html">Install - Wez's Terminal Emulator</a></p>
-<p><a class="admonition-anchor-link" href="#admonition-install---wezs-terminal-emulatorhttpswezfurlongorgwezterminstallationhtml"></a></p>
+<p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/on.html">wezterm.on(event_name, callback)</a></p>
+<p><a class="admonition-anchor-link" href="#admonition-weztermonevent_name-callbackhttpswezfurlongorgweztermconfigluaweztermonhtml"></a></p>
 </div>
 <div>
-<p>WezTerm is available pre-built for the major platforms and, because it is open source, you may also build it for yourself.</p>
-<p>WezTermは主要なプラットフォーム用にあらかじめビルドされていますが、オープンソースであるため、自分でビルドすることも可能です。</p>
+<p>wezterm.on can register multiple callbacks for the same event; internally an ordered list of callbacks is maintained for each event.
+When the event is emitted, each of the registered callbacks is called in the order that they were registered.</p>
+<p>wezterm.on は、同じイベントに対して複数のコールバックを登録することができます; 内部的には、各イベントに対してコールバックの順序付きリストが維持されます。
+イベントが発信されると、登録された各コールバックは、登録された順に呼び出されます。</p>
 </div>
 </div>
-<p>環境に合わせて、好きな方法でインストールしてください。</p>
-<p>では、起動してみましょう。(ユーザー名だけちょっと雑に隠しますが気にしないでください。)</p>
-<p><img src="img/initial.png" alt="initial.heic" /></p>
+<p>これを踏まえた上で、<code>update-status</code>をもう一個作ります。<sup class="footnote-reference"><a href="#a">1</a></sup></p>
+<div id="admonition-update-statushttpswezfurlongorgweztermconfigluawindow-eventsupdate-statushtml" class="admonition note">
+<div class="admonition-title">
+<p><a href="https://wezfurlong.org/wezterm/config/lua/window-events/update-status.html">update-status</a></p>
+<p><a class="admonition-anchor-link" href="#admonition-update-statushttpswezfurlongorgweztermconfigluawindow-eventsupdate-statushtml"></a></p>
+</div>
+<div>
+<p>There is no defined return value for the event, but its purpose is to allow you the chance to carry out some activity and then ultimately call window:set_right_status or window:set_left_status.</p>
+<p>このイベントの戻り値は定義されていませんが、その目的は、何らかの活動を行い、最終的に window:set_right_status または window:set_left_status を呼び出す機会を提供することです。</p>
+</div>
+</div>
+<p>説明にもある通り、「最終的に<code>window:set_right_status</code>または<code>window:set_left_status</code>を呼び出す目的」のものであるため、
+なんかコレじゃないとは思っていますが、他に方法が見つけられませんでした😢</p>
+<div id="admonition-info" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="#admonition-info"></a></p>
+</div>
+<div>
+<p>今後の仕様追加・変更によって、より自然に実現できるかもしれませんね。</p>
+</div>
+</div>
+<h2 id="では実装"><a class="header" href="#では実装">では実装</a></h2>
+<p><code>event.lua</code>に新しく以下を追記します。</p>
+<div id="admonition-eventlua" class="admonition example">
+<div class="admonition-title">
+<p>event.lua</p>
+<p><a class="admonition-anchor-link" href="#admonition-eventlua"></a></p>
+</div>
+<div>
+<pre><code class="language-lua">local DPI_CHANGE_NUM = 144
+local DPI_CHANGE_FONT_SIZE = 10.0
+
+local prev_dpi = 0
+
+wezterm.on('ToggleDpi', function(window, pane)
+  local overrides = window:get_config_overrides() or {}
+  overrides.font_size = window.get_dimensitons().dpi == CHANGE_NUM and CHANGE_FONT_SIZE or nil
+
+  window:set_config_overrides(overrides)
+end)
+
+wezterm.on('update-status', function(window, pane)
+  local dpi = window:get_dimensions().dpi
+
+  if dpi == prev_dpi then
+    return
+  end
+
+  wezterm.action.EmitEvent('ToggleDpi')
+  prev_dpi = dpi
+end)
+</code></pre>
+</div>
+</div>
+<p><code>dpi</code>と<code>font_size</code>周りの値はわたしの環境で決め打ちにしちゃってるので適宜調整してください。</p>
+<p>動作としては、<code>dpi</code>に変更があったら<code>ToggleDpi</code>と名付けたカスタムイベントを呼び出すと言うものです。
+<code>ToggleDpi</code>の自体は手動でやっていた処理とほぼ同じですね。</p>
+<div id="admonition-info-1" class="admonition info">
+<div class="admonition-title">
+<p>Info</p>
+<p><a class="admonition-anchor-link" href="#admonition-info-1"></a></p>
+</div>
+<div>
+<p>わざわざ<code>ToggleDpi</code>なんていうカスタムイベントいらなくない？と思われるかもしれませんが、
+やっぱり<code>update-status</code>の本来の意図とは違う使い方なので最小限で抜けたいんですよね〜。</p>
+</div>
+</div>
 <div id="admonition-success" class="admonition success">
 <div class="admonition-title">
 <p>Success</p>
 <p><a class="admonition-anchor-link" href="#admonition-success"></a></p>
 </div>
 <div>
-<p>動きましたね。
-まだまだ味気ないですが、設定を重ねていくと面白みが増してきます。</p>
-<p>少し補足すると、上のスクリーンショットは<code>WezTerm</code>上で<code>zsh</code>が動いている状態です。
-シェルの設定なども含め、まだ何もいじっていない状態であればこんな感じになると思います<sup class="footnote-reference"><a href="#unix">1</a></sup>。</p>
-<p>では、次から<code>WezTerm</code>の設定を行なっていきましょう。</p>
+<p>なんか、すごい簡単でしたね😆</p>
+<p>既に用意されているロジックをつなぐだけ☺️</p>
 </div>
 </div>
-<div class="footnote-definition" id="unix"><sup class="footnote-definition-label">1</sup>
-<p>Unix だと<code>bash</code>が動いているでしょうか。</p>
+<div class="footnote-definition" id="a"><sup class="footnote-definition-label">1</sup>
+<p>ステータスバーの飾り付けの際にも使用しましたね。</p>
 </div>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../introduction.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../wezterm/toggle-font.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../wezterm/base.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -206,13 +268,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../introduction.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../wezterm/toggle-font.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../wezterm/base.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
